--- a/src/editor.scss
+++ b/src/editor.scss
@@ -4,12 +4,17 @@
  * Replace them with your own styles or remove the file completely.
  */
 
+ 
 .wp-block-math-input-with-mathquill-direct-math-input {
 	// border: 1px dotted #f00;
 
 	.mq-editable-field {
 		border: none;
 		display: block;
+	}
+
+	&.is-showing-latex {
+		outline: 1px solid var(--wp--preset--color--foreground);
 	}
 }
 
