--- a/src/editor.scss
+++ b/src/editor.scss
@@ -16,6 +16,11 @@
 	&.is-showing-latex {
 		outline: 1px solid var(--wp--preset--color--foreground);
 	}
+
+	&.is-selected .mq-root-block.mq-empty {
+		background-color: var(--wp--preset--color--foreground);
+		opacity: 0.2;
+	}
 }
 
 .copyable-latex-string {
